<resources>
    <string name="app_name">Quiz</string>
    <string name="begin_quiz">Begin Quiz</string>

    <string name="s_prev_button">Previous</string>
    <string name="s_next_button">Next</string>


    <string name="QuestionText"> Nincs kérdés </string>
    <string name="restartButton">Restart</string>

    <string name="chart_total">TOTAL</string>
    <string name="chart_correct">CORRECT</string>
    <string name="chart_wrong">WRONG</string>
    <string name="chart_0">0</string>

    <!-- Register -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="passwordAgain_hint">Password Again</string>
    <string name="button_register">Register</string>
</resources>